--- a/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
+++ b/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
@@ -4,8 +4,8 @@
 
 <link href="~/css/Menu.css" rel="stylesheet" />
 <div class="menuList">
-    <img src="~/images/Menu/logo.png" class="menuLogo" />
-
+    @*<img src="~/images/Menu/logo.png" class="menuLogo" />*@
+    <div class="menuLogo"></div>
     <div class="menuBlock">
         @{
             List<MenuDisplay> MenuList = Model.ToList<MenuDisplay>();
