--- a/PodoDemo/wwwroot/css/Layout.css
+++ b/PodoDemo/wwwroot/css/Layout.css
@@ -8,26 +8,62 @@ html, body {
 
 .RenderView {
     background-color: #f9f9f9;
-    padding-top:20px;
-}
-
-
-.View {
-    width: 1300px;
-    background-color:white;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius:4px;
-    /*margin-top:20px;*/
 }
 
 .ViewTitle {
     background-color: #474747;
     height: 45px;
     text-align: left;
-    border-radius: 5px 5px 0px 0px;
-    color:white;
-    vertical-align:middle;
-    line-height:45px;
+    /*border-radius: 5px 5px 0px 0px;*/
+    color: white;
+    vertical-align: middle;
+    line-height: 45px;
 }
+
+    .ViewTitle span {
+        margin-left: 20px;
+        font-weight: bold;
+    }
+
+.View {
+    width: 1330px;
+    background-color: white;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+    .View .SearchCondition {
+        margin: 15px;
+        border: 1px solid #b4b4b4;
+    }
+
+        .View .SearchCondition table {
+            width: 100%;
+        }
+
+            .View .SearchCondition table .SearchLabel {
+                width: 12.5%;
+                text-align:right;
+                /*padding:10px;*/
+                font-size:15px;
+            }
+
+            .View .SearchCondition table .SearchInput {
+                width: 12.5%;
+            }
+
+            .View .SearchCondition table .SearchFunctionTr .SearchButton {
+                float: right;
+                text-align: right;
+                border: none;
+                width: 100px;
+            }
+
+    .View .ViewContent {
+        text-align: center;
+        margin-left: 15px;
+        margin-right: 15px;
+        margin-bottom: 15px;
+    }
