--- a/PodoDemo/Views/Accounts/Index.cshtml
+++ b/PodoDemo/Views/Accounts/Index.cshtml
@@ -74,8 +74,6 @@
     });
 </script>
 
-
-
 <div class="View">
     <div class="ViewTitle">
         <span>Account List</span>
@@ -83,25 +81,33 @@
     <div class="SearchCondition">
         <table>
             <tr>
-                <td class="SearchLabel">Account Name</td>
-                <td class="SearchInput">
-                    <input type="text" placeholder="Account Name" />
+                <td class="LabelTD">
+                    <span class="SearchLabel">Account Name</span>
                 </td>
-                <td class="SearchLabel">Phone</td>
-                <td class="SearchInput">
-                    <input type="text" placeholder="Account Phone" />
+                <td class="inputTD">
+                    <input type="text" class="SearchInput" placeholder="Account Name" />
                 </td>
-                <td class="SearchLabel">CustomerType</td>
-                <td class="SearchInput">
-                    <input type="text" />
+                <td class="LabelTD">
+                    <span class="SearchLabel">Phone</span>
                 </td>
-                <td class="SearchLabel">ETC</td>
-                <td class="SearchInput">
-                    <input type="text" />
+                <td class="inputTD">
+                    <input type="text" class="SearchInput" placeholder="Account Phone" />
+                </td>
+                <td class="LabelTD">
+                    <span class="SearchLabel">CustomerType</span>
+                </td>
+                <td class="inputTD">
+                    <input type="text" class="SearchInput" />
+                </td>
+                <td class="LabelTD">
+                    <span class="SearchLabel">ETC</span>
+                </td>
+                <td class="inputTD">
+                    <input type="text" class="SearchInput" />
                 </td>
             </tr>
 
-            <tr class="SearchFunctionTr">
+            <tr>
                 <td colspan="8">
                     <button type="button" class="SearchButton">Search</button>
                 </td>
