--- a/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
+++ b/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
@@ -5,7 +5,7 @@
 <link href="~/css/Menu.css" rel="stylesheet" />
 <div class="menuList">
     @*<img src="~/images/Menu/logo.png" class="menuLogo" />*@
-    <div class="menuLogo"></div>
+    <div class="menuLogo">로고 150 * 60 px</div>
     <div class="menuBlock">
         @{
             List<MenuDisplay> MenuList = Model.ToList<MenuDisplay>();
