--- a/PodoDemo/wwwroot/css/Layout.css
+++ b/PodoDemo/wwwroot/css/Layout.css
@@ -33,37 +33,57 @@ html, body {
     margin-right: auto;
 }
 
-
     .View .SearchCondition {
         margin: 15px;
-        border: 1px solid #b4b4b4;
+        /*border: 1px solid #b4b4b4;*/
     }
 
         .View .SearchCondition table {
             width: 100%;
+            border-spacing: 0px 0px;
+            border-collapse: collapse;
         }
-
-            .View .SearchCondition table .SearchLabel {
-                width: 12.5%;
-                text-align:right;
-                /*padding:10px;*/
-                font-size:15px;
-            }
-
-            .View .SearchCondition table .SearchInput {
-                width: 12.5%;
-            }
-
-            .View .SearchCondition table .SearchFunctionTr .SearchButton {
-                float: right;
-                text-align: right;
-                border: none;
-                width: 100px;
-            }
 
     .View .ViewContent {
         text-align: center;
         margin-left: 15px;
         margin-right: 15px;
         margin-bottom: 15px;
+    }
+
+.LabelTD {
+    width: 12.5%;
+    background-color: #474747;
+    color: white;
+}
+
+.SearchLabel {
+    text-align: center;
+}
+
+.InputTD {
+    width: 12.5%;
+}
+
+.SearchInput {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+
+.SearchButton {
+    float: right;
+    text-align: center;
+    border: none;
+    width: 160px;
+    height: 25px;
+    color: white;
+    font-size: 15px;
+    padding: 0px;
+    background-color: #2588EA;
+}
+
+    .SearchButton:hover {
+        cursor: pointer;
+        color: #796d6d;
     }
