--- a/PodoDemo/Views/Accounts/Index.cshtml
+++ b/PodoDemo/Views/Accounts/Index.cshtml
@@ -117,5 +117,7 @@
     <div class="ViewContent">
         <div id="accountList"></div>
     </div>
+
+    <a href="/Accounts/Create">»ý¼º</a>
 </div>
 
