--- a/PodoDemo/Views/Accounts/Index.cshtml
+++ b/PodoDemo/Views/Accounts/Index.cshtml
@@ -118,6 +118,6 @@
         <div id="accountList"></div>
     </div>
 
-    <a href="/Accounts/Create">»ý¼º</a>
+    <a href="/Accounts/Create">Create</a>
 </div>
 
