--- a/PodoDemo/Views/Home/Index.cshtml
+++ b/PodoDemo/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>포도CRM</title>
+    <link rel="shortcut icon" type="image/x-icon" href="~/images/favicon.ico" />
     <script src="~/js/jquery-3.2.1.min.js"></script>
     <link href="~/css/LoginPage.css" rel="stylesheet" />
 
