--- a/PodoDemo/Views/Shared/Layout.cshtml
+++ b/PodoDemo/Views/Shared/Layout.cshtml
@@ -5,10 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - 포도CRM</title>
+    <link rel="shortcut icon" type="image/x-icon" href="~/images/favicon.ico" />
     <script src="~/js/jquery-3.2.1.min.js"></script>
-
     <link href="~/css/Layout.css" rel="stylesheet" />
-
     <script src="~/js/jqwidgets/jqx-all.js"></script>
     <link href="~/js/jqwidgets/styles/jqx.base.css" rel="stylesheet" />
 
@@ -17,6 +16,7 @@
             SetRenderViewHeight();
         });
 
+        // 화면 사이즈 변경될 때 마다 배경 색 다시 채우기
         function SetRenderViewHeight() {
             $("#RenderView").height(window.innerHeight - 60);
         }
