--- a/PodoDemo/wwwroot/css/Layout.css
+++ b/PodoDemo/wwwroot/css/Layout.css
@@ -46,9 +46,13 @@ html, body {
 
     .View .ViewContent {
         text-align: center;
-        margin-left: 15px;
-        margin-right: 15px;
-        margin-bottom: 15px;
+        margin: 15px;
+    }
+
+    .View .ViewContent .ViewSubTitle{
+        float:left;
+        font-weight:bold;
+        margin-bottom:5px;
     }
 
 .LabelTD {
@@ -102,7 +106,7 @@ html, body {
 .ViewContent .tableLabelTD {
     background-color: #EEF7FF;
     border: 1px solid #494949;
-    width:150px;
+    width: 150px;
 }
 
 .ViewContent .tableInputTD {
@@ -125,19 +129,24 @@ html, body {
 .ControlButtonArea {
     float: right;
     text-align: center;
+    
 }
 
     .ControlButtonArea a {
         text-decoration: none;
         border: none;
-        background-color: #EEF7FF;
+        background-color: #2588EA;
         font-size: 15px;
+        color: white;
+        width:200px;
     }
 
     .ControlButtonArea button {
-        border: none;
-        background-color: #EEF7FF;
+        border: 1px solid black;
+        background-color: #2588EA;
         font-size: 15px;
+        color: white;
+        width: 200px;
     }
 
         .ControlButtonArea button:hover {
